--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "minus-recall",
    "metadata": {
     "scrolled": true
@@ -9230,7 +9230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "differential-cache",
    "metadata": {},
    "outputs": [],
@@ -9260,7 +9260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "facial-victorian",
    "metadata": {
     "scrolled": false
@@ -9298,8 +9298,8 @@
     "    axr[i].set_axis_on()\n",
     "    axr[i].imshow(img)\n",
     "    axr[i].axis('off')\n",
-    "plt.suptitle('Important Components of Active Molecules', fontsize=15 , y=1.025)\n",
-    "plt.savefig('images/imptfeatures.png')    "
+    "ttl = plt.suptitle('Important Components of Active Molecules', fontsize=15 , y=1.025)\n",
+    "plt.savefig('images/imptfeatures.png', dpi=fig.dpi, bbox_inches='tight',bbox_extra_artists=[ttl])    "
    ]
   },
   {
