Update to have list of used features

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -6096,6 +6096,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "conditional-franklin",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save reduced dataset to use to create column list for streamlit app\n",
+    "X_train.to_csv('datasets/X_descriptors.csv', index=False)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "worth-modem",
    "metadata": {},
