--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -1720,7 +1720,8 @@
     }
    ],
    "source": [
-    "# The '.' in some SMILES notations indicates a disconnected structure, usually a salt.\n",
+    "# The '.' in some SMILES notations indicates a disconnected structure, \n",
+    "# usually a salt.\n",
     "# First look at the 'canonical_smiles' that contain '.'s\n",
     "[x for x in mmp_basic['canonical_smiles'] if '.' in x]"
    ]
@@ -2155,7 +2156,7 @@
    "id": "resident-pocket",
    "metadata": {},
    "source": [
-    "Yes- the mean Molecular Weight is below 500, the LogP and number of H donors are below 5 and the number of H acceptors is below 10. Even when looking at the upper quartile line, the features meet are are close to meeting the criteria. "
+    "Yes- the mean Molecular Weight is below 500, the LogP and number of H donors are below 5 and the number of H acceptors is below 10. Even when looking at the upper quartile line, the features meet or are close to meeting the criteria. "
    ]
   },
   {
