--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -55,7 +55,7 @@
    "id": "current-nashville",
    "metadata": {},
    "source": [
-    "Data for this project was obtained from the [ChEMBL database](https://www.ebi.ac.uk/chembl/). The database contained 6418 bio-active molecules that had been tested for activity on MMP9. Of these molecules, 3592 had a reported IC50 (concentration of drug required to inhibit 50% of MMP9 activity) value and were used to create the model. The data from ChEMBL contains 45 features, but I only used 3- chembl_id, canonical SMILES (a representation of the molecule), and the IC50 value. The IC50 value was used to create a target category- 'inactive', 'active' or 'intermediate'. Finally, the canonical SMILES was used to create a database of chemical properities of the compounds using [PaDEL](http://www.yapcwsoft.com/dd/padeldescriptor/). The final dataset consisted of 2263 rows and 147 features representing various chemical properites of the compounds. "
+    "Data for this project was obtained from the [ChEMBL database](https://www.ebi.ac.uk/chembl/). The database contained 6418 bio-active molecules that have been tested for activity on MMP9. Of these molecules, 3592 had a reported IC50 (concentration of drug required to inhibit 50% of MMP9 activity) value and were used to create the model. The data from ChEMBL contains 45 features, but I only used 3- chembl_id, canonical SMILES (a representation of the molecule), and the IC50 value. The IC50 value was used to create a target category- 'inactive', 'active' or 'intermediate'. Finally, the canonical SMILES was used to create a database of the chemical properities of the compounds using [PaDEL](http://www.yapcwsoft.com/dd/padeldescriptor/). The final dataset consisted of 2263 rows and 147 features representing various chemical properites of the compounds. "
    ]
   },
   {
@@ -6827,7 +6827,7 @@
    "id": "whole-trademark",
    "metadata": {},
    "source": [
-    "I am mainly useing the precision and f1 scores to judge model performance. The purpose of this model is to decrease the number of inactive compounds that are assayed for acvitiy in vitro, so I want to decrease the number of false positives in the model (select a model with a high precision score). Too many false negatives would be bad too, so will look at the f1 score as well. \n",
+    "I am mainly using the precision and f1 scores to judge model performance. The purpose of this model is to decrease the number of inactive compounds that are assayed for activity in vitro, so I want to decrease the number of false positives in the model (select a model with a high precision score). Too many false negatives would be bad too, so will look at the f1 score as well. \n",
     "\n",
     "The KNeighborsClassifier has the best test scores. The SVC has similar though slightly lower test scores, though it was on top in the Lazy Predict results. The RandomForestClassifier test results were the lowest and also the most overfit."
    ]
@@ -9745,7 +9745,7 @@
    "id": "exempt-quantum",
    "metadata": {},
    "source": [
-    "Many of the structures that were important for the models' predictions are evident in these structures. With only a small sample of each group, it is impossible to say that the number of times the structures appear in each group mean anything. I could go back to the datasets and look at the number of times the PubChem fingerprints show up in each group to get more accurate statistics on that."
+    "Many of the structures that were important for the models' predictions are evident in these structures. With only a small sample of each group, it is impossible to say that the number of times the structures appear in each group means anything. I could go back to the datasets and look at the number of times the PubChem fingerprints show up in each group to get more accurate statistics on that."
    ]
   },
   {
@@ -9777,7 +9777,7 @@
    "id": "capable-quantity",
    "metadata": {},
    "source": [
-    "Because the model does miss some of the active compounds, it could be useful to set the probabilty threshold active predictions lower if it can be done without greatly increasing number of false negatives. I would first look at at the prediction probabilities and to see if the model is more confident in its correct predictions than its incorrect predictions. \n",
+    "Because the model does miss some of the active compounds, it could be useful to set the probabilty threshold for active predictions lower if it can be done without greatly increasing number of false negatives. I would first look at at the prediction probabilities to see if the model is more confident in its correct predictions than its incorrect predictions. \n",
     "\n",
     "I would also like to try dropping the intermediate category like the Data Professor did and to see if it improves the model. \n",
     "\n",
